--- a/src/pages/agregar-cupones/agregar-cupones.html
+++ b/src/pages/agregar-cupones/agregar-cupones.html
@@ -15,6 +15,13 @@
   </ion-navbar>
 </ion-header>
 <ion-content padding>
+  <ion-col col-5>
+    <h2>
+        <b>Master</b>
+        <div class="detalle">Agregar cupones</div>
+    </h2>
+</ion-col>
+
   <form [formGroup]="myForm" novalidate class="">
    <ion-list>
        <ion-item>
