--- a/src/pages/detalle-cupon/detalle-cupon.html
+++ b/src/pages/detalle-cupon/detalle-cupon.html
@@ -17,7 +17,13 @@
 
     </ion-navbar>
 </ion-header>
-<ion-content>
+<ion-content padding>
+    <ion-col col-5>
+        <h2>
+          <b>Master</b>
+          <div class="detalle">Detalle cupón</div>
+        </h2>
+      </ion-col>
     <div *ngFor="let cupon of cupones">
 
         <ion-card>
