--- a/src/pages/reserva-detalle/reserva-detalle.html
+++ b/src/pages/reserva-detalle/reserva-detalle.html
@@ -78,6 +78,12 @@
             <ion-badge item-end>{{ reserv.codigoRP }}</ion-badge>
         </ion-item>
 
+        <ion-item>
+            <ion-icon ios="ios-key" md="md-key" item-start style="color: #fcc04d"></ion-icon>
+            UID reservación
+            <ion-badge item-end>{{ reserv.idReservacion }}</ion-badge>
+        </ion-item>
+
     </ion-card>
 
     <hr>
