--- a/src/pages/slider/slider.html
+++ b/src/pages/slider/slider.html
@@ -20,8 +20,11 @@
 
   <ion-slide class="sla2">
 
-    <div class=" sla2">
-
+    <div align="center">
+      <img src="./assets/imgs/Logoblanco.png" style="width:190px; margin-top: 60px;">
+      <br>
+      <br>
+      <label for="" style="color: white;"> ADMIN SUCURSAL</label>
     </div>
 
   </ion-slide>
