--- a/src/pages/admin-croquis/admin-croquis.html
+++ b/src/pages/admin-croquis/admin-croquis.html
@@ -69,7 +69,7 @@
                             <button ion-button full (click)="updateFoto()">Modificar croquis</button>
                         </ng-template>
                         <ng-template #actulizar>
-                            <button color="secondary" ion-button full>Actulizar croquis</button>
+                            <button color="secondary" ion-button full (click)="modificarFoto(cro.$key)">Actulizar croquis</button>
                         </ng-template>
                     </ion-col>
                 </ion-row>
