--- a/src/pages/admin-home/admin-home.html
+++ b/src/pages/admin-home/admin-home.html
@@ -208,6 +208,13 @@
                 </ion-badge>
             </ion-item>
 
+            <!-- <ion-item (click)="goTools(this.sucursal)">
+                <img item-start class="imgRes4" src="./assets/content/icono3.png"> Herramientas
+                <ion-badge class="buttonColor" item-end>
+                    <ion-icon ios="ios-arrow-forward" md="md-arrow-forward" style="color:white"></ion-icon>
+                </ion-badge>
+            </ion-item> -->
+
         </div>
 
         <!-- ADMINISTRADOR MASTER  -->
